# Subtitle-translation

./: .env.example  .env.ps1  .gitignore  AGENTS.md  CLAUDE.md  README.md  batch.ps1  batch.py  beautify_srt.py  beautify_srt.sh  download.ps1  download.sh  download_and_sub.sh  ffmpeg-burn.ps1  ffmpeg-burn.sh  glossary_builder.py  glossary_prompt.example.md  merge_ass.py  mpv-burn.ps1  mpv-burn.sh  pipeline.ps1  pipeline.sh  proofread_prompt.example.md  providers.example.json  providers.json  pyproject.toml  setup.ps1  setup.sh  split_prompt.example.md  split_prompt.md  tavily_domains.example.json  template.ass  translate_prompt.example.md  translate_srt.py  whisper.ps1  whisper.sh  whisper_sub.py
.agents/skills/beautify/: SKILL.md
.agents/skills/download/: SKILL.md
.agents/skills/knowledge/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/release/agents/: openai.yaml
.agents/skills/translate/: SKILL.md
.agents/skills/whisper/: SKILL.md
.claude/skills/: knowledge.md  translate.md  whisper.md
.claude/skills/beautify/: SKILL.md
.claude/skills/download/: SKILL.md
.claude/skills/knowledge/: SKILL.md
.claude/skills/translate/: SKILL.md
.claude/skills/whisper/: SKILL.md
docs/superpowers/plans/: 2026-07-06-web-evidence-sidecar.md
docs/superpowers/specs/: 2026-07-06-web-evidence-sidecar-design.md
tests/: test_burn_scripts.py  test_download_pipeline_scripts.py  test_json_protocol.py  test_merge_ass.py  test_setup_scripts.py
