[project]
name = "subtitle-translation"
version = "1.5.0"
description = "JSON-first WhisperX subtitle translation pipeline"
requires-python = ">=3.10,<3.14"
dependencies = [
    "openai>=1.0.0",
    "langcodes[data]>=3.4.0",
    "tavily-python>=0.5.0",
]

[project.optional-dependencies]
asr = [
    "whisperx @ git+https://github.com/m-bain/whisperx.git",
]

[tool.uv]
package = false
